--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
+
 </head>
 
 <body>
+<header>
+<nav>
+    <div>
+ <img src="C:\Users\Jav\Desktop\Lambda\Sprint-Challenge--User-Interface\img\lambda-black.png" alt="lambda logo">
+    </div>
+    <ul>
+        <li><a href="Home">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="">Products</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+    </ul>
+</nav>
+
+
+</header>
+
+
     <div class="container">
    
         <section class="top-content">
